--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,10 @@
               "src/styles.scss",
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies": [
+              "@messageformat/core"
+            ]
           },
           "configurations": {
             "production": {
