--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "@angular/router": "15.2.2",
     "@ngx-translate/core": "14.0.0",
     "@ngx-translate/http-loader": "7.0.0",
-    "ngx-translate-messageformat-compiler": "6.2.0",
     "bootstrap": "4.5.3",
+    "ngx-editor": "15.3.0",
+    "ngx-translate-messageformat-compiler": "6.2.0",
     "rxjs": "7.5.7",
     "tslib": "2.4.1",
     "zone.js": "0.12.0"
