--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "build:prod": "ng build --configuration=production",
-    "deploy": "ng build --output-path docs --base-href conferences-reservation"
+    "build:prod": "ng build --configuration=production"
   },
   "private": true,
   "dependencies": {
