--- a/package.json
+++ b/package.json
@@ -26,16 +26,19 @@
     "@ngx-translate/core": "14.0.0",
     "@ngx-translate/http-loader": "7.0.0",
     "bootstrap": "4.5.3",
+    "file-saver": "2.0.5",
     "ngx-editor": "15.3.0",
     "ngx-translate-messageformat-compiler": "6.2.0",
     "rxjs": "7.5.7",
     "tslib": "2.4.1",
+    "xlsx": "^0.18.5",
     "zone.js": "0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "15.2.2",
     "@angular/cli": "15.2.2",
     "@angular/compiler-cli": "15.2.2",
+    "@types/file-saver": "2.0.5",
     "@types/jasmine": "4.0.0",
     "jasmine-core": "4.2.0",
     "karma": "6.4.0",
