--- a/angular.json
+++ b/angular.json
@@ -77,10 +77,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "conferences-reservation:build:production"
+              "buildTarget": "conferences-reservation:build:production"
             },
             "development": {
-              "browserTarget": "conferences-reservation:build:development"
+              "buildTarget": "conferences-reservation:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -88,7 +88,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "conferences-reservation:build"
+            "buildTarget": "conferences-reservation:build"
           }
         },
         "test": {
