--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "19.2.3",
     "@angular/compiler": "19.2.3",
     "@angular/core": "19.2.3",
+    "@angular/fire": "19.0.0",
     "@angular/forms": "19.2.3",
     "@angular/material": "18.2.14",
     "@angular/platform-browser": "19.2.3",
