--- a/angular.json
+++ b/angular.json
@@ -32,8 +32,9 @@
               "src/manifest.webmanifest"
             ],
             "styles": [
-              "src/styles.scss",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "src/app/shared/styles/theme-colors.scss",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/styles.scss"
             ],
             "scripts": [],
             "allowedCommonJsDependencies": [
